fixed spacing on reviews index page

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -432,7 +432,7 @@ body, html {
 
 .profile-main {
     max-width: 95%;
-    max-height: 85%
+    max-height: 85%;
     margin: 0 auto;
 }
 
